Pin charsets to UTF-8 in two test sites uncovered by charset audit
Audit of byte/char boundaries across all production and test source
revealed two test-only sites with implicit charset dependencies:

  - ContentPartTest.imageFileRejectsUnknownExtension: replace
    Files.write(file, "hello".getBytes()) with Files.writeString(file,
    "hello"). The string is ASCII so byte output was identical
    everywhere today, but Files.writeString uses UTF-8 by contract
    (per JDK docs since Java 11) and the new form is shorter.

  - LlamaModelTest.completeAndReadStdOut: pin the PrintStream that
    captures System.out and the matching ByteArrayOutputStream.toString
    to StandardCharsets.UTF_8. Model output is multi-byte UTF-8 token
    text; on a non-UTF-8 default host (e.g. Windows CP-1252) the
    captured assertion strings would mangle non-ASCII tokens. Removes
    the stale @SuppressWarnings('ImplicitDefaultCharsetUsage').

Spotbugs count unchanged at 0. Tests pass cleanly through the
charset-pinned capture path.